bin_SCRIPTS = \
	htmlex \
	htmlex-site

man_MANS = \
	htmlex.1

info_TEXINFOS = \
	htmlex.texi

EXTRA_DIST = \
	BUGS \
	NOTE.macro \
	TODO \
	es/BUGS \
	es/ChangeLog \
	es/htmlex.1.in \
	es/NEWS \
	es/README \
	es/TODO \
	examples/*.sh \
	examples/*.htex \
	htmlex-site.in \
	htmlex.1.in \
	htmlex.in \
	htmlex.lsm.in \
	htmlex.spec.in \
	htmlex.texi
